Fix: Autorização do proprietário para usuários entrarem na propriedade e ver seus recursos funcionando!