@@ -1,60 +1,39 @@
 package com.migueltcc.fertintelligence.service.implementation;
 
-import com.migueltcc.fertintelligence.composedAttributes.user.AccessRequestStatus;
-import com.migueltcc.fertintelligence.composedAttributes.user.Cargo;
 import com.migueltcc.fertintelligence.dto.soilAnalysis.SoilAnalysisCreateRequestDto;
 import com.migueltcc.fertintelligence.dto.soilAnalysis.SoilAnalysisPostRequestDto;
 import com.migueltcc.fertintelligence.dto.soilAnalysis.SoilAnalysisResponseDto;
 import com.migueltcc.fertintelligence.model.fertintelligence.PlotModel;
-import com.migueltcc.fertintelligence.model.fertintelligence.PropertyModel;
 import com.migueltcc.fertintelligence.model.fertintelligence.SoilAnalysisModel;
 import com.migueltcc.fertintelligence.model.fertintelligence.UserModel;
-import com.migueltcc.fertintelligence.repository.PlotAccessRequestRepository;
 import com.migueltcc.fertintelligence.repository.PlotRepository;
-import com.migueltcc.fertintelligence.repository.PropertyAccessRequestRepository;
 import com.migueltcc.fertintelligence.repository.SoilAnalysisRepository;
 import com.migueltcc.fertintelligence.repository.UserRepository;
+import com.migueltcc.fertintelligence.security.PermissionManager;
 import com.migueltcc.fertintelligence.service.documentation.SoilAnalysisService;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.persistence.PersistenceContext;
-import jakarta.persistence.TypedQuery;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.access.AccessDeniedException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class SoilAnalysisServiceImpl implements SoilAnalysisService {
 
-    private static final Set<Cargo> ALLOWED_ROLES = Set.of(
-            Cargo.PROPRIETARIO,
-            Cargo.GERENTE,
-            Cargo.AGRONOMO_RESIDENTE,
-            Cargo.AGRONOMO_CONSULTOR,
-            Cargo.SUPERVISOR_DE_AREA,
-            Cargo.SECRETARIO
+    private static final List<String> CHILD_ENTITIES = List.of(
+            "PhysicalAnalysisExtractModel",
+            "FertilityAnalysisExtractModel",
+            "SaturationExtractAnalysisExtractModel"
     );
 
-    @Autowired
-    private SoilAnalysisRepository soilAnalysisRepository;
-
-    @Autowired
-    private PlotRepository plotRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private PropertyAccessRequestRepository propertyAccessRequestRepository;
-
-    @Autowired
-    private PlotAccessRequestRepository plotAccessRequestRepository;
+    private final SoilAnalysisRepository soilAnalysisRepository;
+    private final PlotRepository plotRepository;
+    private final UserRepository userRepository;
+    private final PermissionManager permissionManager;
 
     @PersistenceContext
     private EntityManager entityManager;
@@ -63,14 +42,11 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
     @Transactional
     public SoilAnalysisResponseDto createSoilAnalysis(SoilAnalysisCreateRequestDto dto, String username) {
         UserModel user = findUserByUsernameOrThrow(username);
+
         PlotModel plot = findPlotByIdOrThrow(dto.getPlotId());
+        permissionManager.assertCanWrite(plot, user);
 
-        // CREATE/EDIT: mantém a mesma política que você já vinha usando (ajuste aqui se quiser regra mais rígida)
-        assertCanAccessPlot(user, plot, true);
-
-        if (!Objects.equals(plot.getIdentification(), dto.getPlotIdentification())) {
-            throw new IllegalArgumentException("A identificação do talhão informada não corresponde ao talhão selecionado.");
-        }
+        validatePlotIdentification(plot, dto.getPlotIdentification());
 
         SoilAnalysisModel soilAnalysis = SoilAnalysisModel.builder()
                 .analysisYear(dto.getAnalysisYear())
@@ -86,10 +62,9 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
     @Transactional(readOnly = true)
     public SoilAnalysisResponseDto getSoilAnalysisById(Long soilAnalysisId, String username) {
         UserModel user = findUserByUsernameOrThrow(username);
-        SoilAnalysisModel soilAnalysis = findSoilAnalysisByIdOrThrow(soilAnalysisId);
 
-        // READ: permite por aprovação da PROPRIEDADE também (corrige teu cenário)
-        assertCanAccessPlot(user, soilAnalysis.getPlot(), false);
+        SoilAnalysisModel soilAnalysis = findSoilAnalysisByIdOrThrow(soilAnalysisId);
+        permissionManager.assertCanRead(soilAnalysis.getPlot(), user);
 
         return soilAnalysis.toDto();
     }
@@ -98,23 +73,23 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
     @Transactional(readOnly = true)
     public List<SoilAnalysisResponseDto> getAllSoilAnalysesByPlot(Long plotId, String username) {
         UserModel user = findUserByUsernameOrThrow(username);
+
         PlotModel plot = findPlotByIdOrThrow(plotId);
+        permissionManager.assertCanRead(plot, user);
 
-        // READ: permite por aprovação da PROPRIEDADE também
-        assertCanAccessPlot(user, plot, false);
-
-        return soilAnalysisRepository.findAllByPlot(plot).stream()
+        return soilAnalysisRepository.findAllByPlot(plot)
+                .stream()
                 .map(SoilAnalysisModel::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public SoilAnalysisResponseDto updateSoilAnalysis(Long soilAnalysisId, SoilAnalysisPostRequestDto dto, String username) {
         UserModel user = findUserByUsernameOrThrow(username);
-        SoilAnalysisModel soilAnalysis = findSoilAnalysisByIdOrThrow(soilAnalysisId);
 
-        assertCanAccessPlot(user, soilAnalysis.getPlot(), true);
+        SoilAnalysisModel soilAnalysis = findSoilAnalysisByIdOrThrow(soilAnalysisId);
+        permissionManager.assertCanWrite(soilAnalysis.getPlot(), user);
 
         if (dto.getAnalysisYear() != null) {
             soilAnalysis.setAnalysisYear(dto.getAnalysisYear());
@@ -133,27 +108,21 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
     @Transactional
     public void deleteSoilAnalysis(Long soilAnalysisId, String username) {
         UserModel user = findUserByUsernameOrThrow(username);
+
         SoilAnalysisModel soilAnalysis = findSoilAnalysisByIdOrThrow(soilAnalysisId);
+        permissionManager.assertCanWrite(soilAnalysis.getPlot(), user);
 
-        assertCanAccessPlot(user, soilAnalysis.getPlot(), true);
+        // --- DELEÇÃO MANUAL EM CASCATA (mantida) ---
+        List<Long> layerIds = entityManager.createQuery(
+                        "SELECT l.id FROM LayerExtractModel l WHERE l.analysis.id = :id", Long.class)
+                .setParameter("id", soilAnalysisId)
+                .getResultList();
 
-        // --- DELEÇÃO MANUAL EM CASCATA ---
+        List<Long> rangeIds = entityManager.createQuery(
+                        "SELECT r.id FROM RangeExtractModel r WHERE r.analysis.id = :id", Long.class)
+                .setParameter("id", soilAnalysisId)
+                .getResultList();
 
-        // 1) IDs de LayerExtract
-        TypedQuery<Long> layerQuery = entityManager.createQuery(
-                "SELECT l.id FROM LayerExtractModel l WHERE l.analysis.id = :id", Long.class
-        );
-        layerQuery.setParameter("id", soilAnalysisId);
-        List<Long> layerIds = layerQuery.getResultList();
-
-        // 2) IDs de RangeExtract
-        TypedQuery<Long> rangeQuery = entityManager.createQuery(
-                "SELECT r.id FROM RangeExtractModel r WHERE r.analysis.id = :id", Long.class
-        );
-        rangeQuery.setParameter("id", soilAnalysisId);
-        List<Long> rangeIds = rangeQuery.getResultList();
-
-        // 3) deletar filhos e extratos
         if (!layerIds.isEmpty()) {
             deleteChildData(layerIds, "layerExtract");
             entityManager.createQuery("DELETE FROM LayerExtractModel l WHERE l.id IN :ids")
@@ -168,77 +137,23 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
                     .executeUpdate();
         }
 
-        // 4) deletar a análise pai
         soilAnalysisRepository.delete(soilAnalysis);
     }
 
     private void deleteChildData(List<Long> extractIds, String fieldName) {
-        String[] childEntities = {
-                "PhysicalAnalysisExtractModel",
-                "FertilityAnalysisExtractModel",
-                "SaturationExtractAnalysisExtractModel"
-        };
-
-        for (String entity : childEntities) {
-            String hql = String.format("DELETE FROM %s c WHERE c.%s.id IN :ids", entity, fieldName);
+        for (String entity : CHILD_ENTITIES) {
+            String hql = "DELETE FROM " + entity + " c WHERE c." + fieldName + ".id IN :ids";
             entityManager.createQuery(hql)
                     .setParameter("ids", extractIds)
                     .executeUpdate();
         }
     }
 
-    /* ======================================================
-       Access control (corrigido e padronizado)
-    ====================================================== */
-
-    private void assertCanAccessPlot(UserModel user, PlotModel plot, boolean requireEdit) {
-        assertAllowedRole(user);
-
-        // regra opcional (igual ao que você fez em Crop): secretário não edita/cria
-        if (requireEdit && user.getCargo() == Cargo.SECRETARIO) {
-            throw new AccessDeniedException("Secretários não têm permissão para criar, editar ou excluir análises.");
-        }
-
-        PropertyModel property = plot.getProperty();
-
-        // Owner
-        if (property.getOwner() != null && property.getOwner().getId().equals(user.getId())) {
-            return;
-        }
-
-        // Manager
-        if (property.getManager() != null && property.getManager().getId().equals(user.getId())) {
-            return;
-        }
-
-        // ✅ CORREÇÃO: se tem aprovação na PROPRIEDADE, pode acessar (ao menos para leitura).
-        boolean hasApprovedPropertyAccess = propertyAccessRequestRepository
-                .findByPropertyAndRequesterAndStatus(property, user, AccessRequestStatus.APPROVED)
-                .isPresent();
-
-        if (hasApprovedPropertyAccess) {
-            return;
-        }
-
-        // fallback: aprovação específica no TALHÃO
-        boolean hasApprovedPlotAccess = plotAccessRequestRepository
-                .findByPlotAndRequesterAndStatus(plot, user, AccessRequestStatus.APPROVED)
-                .isPresent();
-
-        if (!hasApprovedPlotAccess) {
-            throw new AccessDeniedException("Você não tem permissão para acessar ou modificar este recurso.");
+    private void validatePlotIdentification(PlotModel plot, String providedIdentification) {
+        if (providedIdentification == null || !plot.getIdentification().equals(providedIdentification)) {
+            throw new IllegalArgumentException("A identificação do talhão informada não corresponde ao talhão selecionado.");
         }
     }
-
-    private void assertAllowedRole(UserModel user) {
-        if (user.getCargo() == null || !ALLOWED_ROLES.contains(user.getCargo())) {
-            throw new AccessDeniedException("Você não tem permissão para acessar ou modificar este recurso.");
-        }
-    }
-
-    /* ======================================================
-       Finders
-    ====================================================== */
 
     private UserModel findUserByUsernameOrThrow(String username) {
         return userRepository.findByUsername(username)
@@ -250,8 +165,8 @@ public class SoilAnalysisServiceImpl implements SoilAnalysisService {
                 .orElseThrow(() -> new EntityNotFoundException("Talhão não encontrado com o ID: " + plotId));
     }
 
-    private SoilAnalysisModel findSoilAnalysisByIdOrThrow(Long id) {
-        return soilAnalysisRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Análise de solo não encontrada com o ID: " + id));
+    private SoilAnalysisModel findSoilAnalysisByIdOrThrow(Long soilAnalysisId) {
+        return soilAnalysisRepository.findById(soilAnalysisId)
+                .orElseThrow(() -> new EntityNotFoundException("Análise de solo não encontrada com o ID: " + soilAnalysisId));
     }
 }
